--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,11 @@ jobs:
 
       - run: git clone https://github.com/sroertgen/oeh-framework-bb.git data/
 
+      - name: make .env.production file
+        run: echo "PATH_PREFIX=oeh-framework-bb/" > .env.production
+
       - name: build public dir with docker image
-        run: docker run -v $(pwd)/public:/app/public -v $(pwd)/data:/app/data laocoon667/skohubvocabs:oeh-framework-bb
+        run: docker run -v $(pwd)/public:/app/public -v $(pwd)/data:/app/data -v $(pwd)/.env.production:/app/.env.production laocoon667/openeduhub-skohub-vocabs:docker
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
